# prismtm

./: PRISMPLAN.md  README.md  migration_generator.py  pyproject.toml  schema_generator.py
schemas/v0.0.0/: bugs.json  global_bugs.json  global_projects.json  project_bugs.schema.json  project_orphans.schema.json  project_tree.schema.json  user_config.schema.json  user_data.schema.json
schemas/v0.1.0/: project_bugs.schema.json  project_tasktree.schema.json  project_time.schema.json
schemas/v1/: project.json  tasks.json
src/: data.py  migrate.py  migration.py  models.py  schema_loader_utils.py  validate.py
src/prismtm/: __init__.py  cli.py  data.py  logs.py  migrate.py  models.py  recovery.py  version.py
src/prismtm/data/: __init__.py  backup.py  core.py  io.py  validate.py
src/schemas/v0.1.0/: project_tasks.schema.json  user_bugs.schema.json
tests/: __init__.py  test_data_core.py  test_migration_generation.py  test_models.py
